Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124925

[REG 6.5.5 -> 6.5.6] Spectrum App Crashes after recording sound in "Record and Playback" Mode

    XMLWordPrintable

Details

    • Windows
    • b574f65b1 (dev), 728c026b4 (6.8), 1b79a974d (6.7), 9e5fa59f3 (tqtc/lts-6.5), ac0424001 (dev), 7bab907e1 (6.8)
    • Multimedia wk 23-24, Multimedia wk 27-28

    Description

      Description:-

      The Spectrum app consistently crashes when users select the "Record and Playback" mode. The crash happens after sound recording completes successfully. On the Windows platform, the application becomes unresponsive and crashes with a segmentation fault.

      Windows Logs:- 

      15:11:50: Debugging C:\Qt\Examples\Qt-6.5.6\multimedia\spectrum\build\Desktop_Qt_6_5_6_MinGW_64_bit-Debug\spectrum.exe ...
      Engine::initialize m_bufferLength 1920000
      Engine::initialize m_dataLength 0
      Engine::initialize format QAudioFormat( 48000 Hz,  2 Channels,  Int16 Format )
      qt.gui.imageio: libpng warning: iCCP: known incorrect sRGB profile
      Engine::initializeRecord
      Engine::initialize m_bufferLength 1920000
      Engine::initialize m_dataLength 0
      Engine::initialize format QAudioFormat( 48000 Hz,  2 Channels,  Int16 Format )
      Engine::audioStateChanged from StoppedState to IdleState
      Engine::audioStateChanged from IdleState to ActiveState
      Engine::calculateLevel pos 172800 len 19200 rms 0.0214403 peak 0.0682068
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 175616 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 175616
      Engine::calculateLevel pos 362880 len 19200 rms 0.0123714 peak 0.0574951
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 365696 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 365696
      Engine::calculateLevel pos 556800 len 19200 rms 0.0220037 peak 0.0796509
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 559616 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 559616
      Engine::calculateLevel pos 748800 len 19200 rms 0.0295643 peak 0.0951233
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 751616 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 751616
      Engine::calculateLevel pos 938880 len 19200 rms 0 peak 0
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 941696 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 941696
      Engine::calculateLevel pos 1130880 len 19200 rms 0 peak 0
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 1133696 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 1133696
      Engine::calculateLevel pos 1322880 len 19200 rms 0 peak 0
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 1325696 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 1325696
      Engine::calculateLevel pos 1516800 len 19200 rms 0.0873 peak 0.249176
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 1519616 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 1519616
      Engine::calculateLevel pos 1708800 len 19200 rms 0.0239497 peak 0.0679016
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 1711616 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      Engine::spectrumChanged pos 1711616
      Engine::audioStateChanged from ActiveState to StoppedState
      Engine::calculateLevel pos 1900800 len 19200 rms 0.0137871 peak 0.0654297
      Engine::calculateSpectrum QThread(0x1b3a9b82af0) count 0 pos 1903616 len 16384 spectrumAnalyser.isReady true
      SpectrumAnalyser::calculate QThread(0x1b3a9b82af0) state 0
      15:24:58: Debugging of C:\Qt\Examples\Qt-6.5.6\multimedia\spectrum\build\Desktop_Qt_6_5_6_MinGW_64_bit-Debug\spectrum.exe has finished with exit code 0.

      Steps to Reproduce:

      1. Build and Run the Spectrum Example on windows.
      2. Select "Record and play back" mode.
      3. Start recording.

      Expected Results: In the "Record and Playback" mode, the Spectrum app should record sound successfully and allow users to play back the recorded audio without crashing.

      Actual Results: After recording sound the app subsequently crashes.

      Note: Please check the attached Images for clarity. 

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-124925
          # Subject Branch Project Status CR V

          Activity

            People

              padubsky Pavel Dubsky
              alrizwan Alber Rizwan
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes