Fix Spectrum app crash in "Record and Playback" mode

Spectrum app is crashing because while in a pull loop stop is called
which closes audio client but it's still being using in the pull loop
and we end up with a null pointer call.

Fixes: QTBUG-124925
Change-Id: Ifaa1d8c2afe61cb3f15eb36a0836b1a477d3bf44
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit b574f65b1f73fba47c56ab7de577766c3f162bc5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 728c026b460642f3be181ac660da868a1ed46876)
(cherry picked from commit 1b79a974d391622f6f7ff3d7aefcc21886a75fa1)